# pmbok

./: .dockerignore  .gitignore  .gitmodules  .promote_tag  .starship.toml  Dockerfile  Dockerfile.root.bak  Inicio-de-Sesion.html  README.md  Taskfile.yaml  buildspec.yml  create_frontend_structure.sh  devbox.json  docker-compose.dev-backend-http.yml  docker-compose.dev-backend-https.yml  docker-compose.dev-frontend-http.yml  docker-compose.dev-frontend-https.yml  docker-compose.dev-http.yml  docker-compose.dev-https.yml  docker-compose.staging-backend-http.yml  docker-compose.staging-backend-https.yml  docker-compose.staging-frontend-http.yml  docker-compose.staging-frontend-https.yml  docker-compose.staging-http.yml  docker-compose.staging-https.yml  docker-compose.staging.yml  docker-compose.yml  implement_modal.sh  index.html  local-health-check.sh  scrum_guide.html  tos cambios que le hice a este código:
backend/: .dockerignore  CHANGELOG.md  Dockerfile  README.md  Taskfile.yaml  db.sqlite3  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt
backend/api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_pmbokprocesscustomization_unique_together_and_more.py  0002_pmbokprocess_kanban_status.py  0002_processstate_pmbokprocess.py  0003_alter_pmbokprocess_kanban_status.py  0003_pmbokprocess_inputs_pmbokprocess_outputs_and_more.py  0004_scrumprocess.py  0006_scrumprocess_kanban_status_and_more.py  (+1 more)
backend/core/: settings.py  urls.py
backend/staticfiles/: staticfiles.json
(+134 files in other folders)
