[tool.poetry]
# ESTO ES LO NUEVO: Evita que Poetry intente instalar tu proyecto como un paquete
# y elimina el error del README.md faltante.
package-mode = false

[project]
name = "pmbok-backend"
version = "0.2.0"
description = "Backend para PMBOK"
authors = [
    {name = "Reydem"}
]
# Eliminamos la línea readme = "README.md" porque no tienes ese archivo
requires-python = "^3.12"
dependencies = [
    "asgiref (==3.9.2)",
    "dj-database-url (==3.0.1)",
    "django (==5.2.6)",
    "django-cors-headers (==4.9.0)",
    "djangorestframework (==3.16.1)",
    "djangorestframework-simplejwt (==5.5.1)",
    "gunicorn (==23.0.0)",
    "packaging (==25.0)",
    "psycopg2-binary (==2.9.10)",
    "pyjwt (==2.10.1)",
    "sqlparse (==0.5.3)",
    "whitenoise (==6.11.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-django = "^4.11.1"